@@ -25,3 +25,4 @@
 - Fixed issues with grabbing the correct manga when browsing a random manga using /random
 - Added support for notifications (requires Cookies)
 - Added loading animation to indicate that the extension is working.(When grabbing notes for the first time it would feel like it was broken because it takes a decent amount of time)
+- Should be working again from the new layout change to Fakku.
